# catan-network

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  Untitled Diagram.drawio  app.html  clone-dependencies.sh  cmake_install.cmake  core_unittest.h  data-structures.md  frontend_api.md  index.html  lobby.h  main.cpp  message_handler.h  net.common.h  readme.md  robots.txt  server_api.md  site.webmanifest  sockets_test  test.cpp  vcpkg.json
api/: message_handler.h
asio/: clone-dependencies.sh
catan-network/: catan.json  game.md
core/: gamecore.h
ignored/: json.h  main.cpp
javascript/: app.js  cards.js  main.js
lobby/: lobby.h
server/: database-api.md  game-api.md  lobby-api.md
test/: core_unittest.h
